--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "axios": "^0.17.1",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "js-cookie": "^2.2.0",
+    "moment": "^2.20.1",
     "react": "^16.2.0",
     "react-cropper": "^1.0.1",
     "react-dom": "^16.2.0",
